# taiga

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taiga.sln  Taiga.vcproj  Taiga.vcxproj  Taiga.vcxproj.filters  accessibility.cpp  accessibility.h  action.cpp  anime.cpp  anime.h  anime_db.cpp  anime_db.h  anime_episode.cpp  anime_episode.h  anime_filter.cpp  anime_filter.h  anime_item.cpp  anime_item.h  anime_user.cpp  anime_user.h  animedb.cpp  animedb.h  animelist.cpp  animelist.h  announce.cpp  announce.h  api.cpp  api.h  appveyor.yml  common.cpp  common.h  (+61 more)
src/: CMakeLists.txt  Taiga.sln  Taiga.vcxproj  Taiga.vcxproj.filters  action.cpp  anime.cpp  anime_db.h  anime_filter.h  anime_item.h  anime_user.h  announce.cpp  announce.h  common.cpp  common.h  dde.cpp  dde.h  debug.h  encryption.cpp  gfx.h  gzip.cpp  http.h  list_sort.cpp  logger.cpp  main.cpp  media.h  mediaplayers.cpp  myanimelist.cpp  myanimelist.h  optional.h  process.h  recognition.cpp  recognition.h  resource.rc  search.cpp  settings.cpp  settings.h  stats.h  std.h  string.cpp  taiga.cpp  (+7 more)
src/base/: accessibility.cpp  accessibility.h  atf.cpp  atf.h  base64.cpp  base64.h  chrono.cpp  chrono.hpp  command_line.cpp  command_line.h  common.cpp  common.h  comparable.h  crc.cpp  crc.h  crypto.cpp  crypto.h  dde.cpp  dde.h  encoding.cpp  encoding.h  encryption.cpp  encryption.h  error.cpp  error.h  file.cpp  file.h  file_monitor.cpp  file_monitor.h  file_search.cpp  file_search.h  foreach.h  format.h  gfx.cpp  gfx.h  gzip.cpp  gzip.h  html.cpp  html.h  http.cpp  (+37 more)
src/compat/: anime.cpp  anime.hpp  anime_db.cpp  crunchyfix.cpp  crunchyfix.h  crypto.cpp  crypto.h  history.cpp  settings.cpp  settings.hpp
src/discord-RPC/: discord_rpc.cpp  discord_rpc_functions.cpp  discord_rpc_functions.h
src/dlg/: dlg_about.cpp  dlg_about.h  dlg_anime_info.cpp  dlg_anime_info.h  dlg_anime_list.cpp  dlg_anime_list.h  dlg_feed_condition.h  dlg_feed_filter.h  dlg_format.cpp  dlg_format.h  dlg_history.cpp  dlg_input.cpp  dlg_input.h  dlg_main.cpp  dlg_main.h  dlg_search.cpp  dlg_settings.h  dlg_settings_page.cpp  dlg_settings_page.h  dlg_test_recognition.cpp
src/gui/: CMakeLists.txt
src/link/: discord.cpp  discord.h  http.cpp  http.h  mirc.cpp  mirc.h  twitter.cpp  twitter.h
src/media/: anime.h  anime.hpp  anime_db.cpp  anime_db.h  anime_db.hpp  anime_db_2.cpp  anime_filter.cpp  anime_filter.h  anime_item.cpp  anime_item.h  anime_season.cpp  anime_season.h  anime_season.hpp  anime_season_db.cpp  anime_season_db.h  anime_util.cpp  anime_util.h  discover.cpp  discover.h
src/resources/: icons.qrc  styles.qrc  taiga.manifest  taiga.rc
src/sync/: anilist.cpp  anilist.h  anilist_ratings.cpp  anilist_ratings.h  anilist_types.h  anilist_util.cpp  anilist_util.h  announce.cpp  announce.h  herro.cpp  herro.h  herro_types.h  herro_util.cpp  herro_util.h  hummingbird.cpp  hummingbird.h  hummingbird_types.h  hummingbird_util.cpp  hummingbird_util.h  kitsu.cpp  kitsu.h  kitsu_types.h  kitsu_util.cpp  kitsu_util.h  manager.cpp  manager.h  myanimelist.cpp  myanimelist.h  myanimelist_types.h  myanimelist_util.cpp  myanimelist_util.h  service.cpp  service.h  sync.cpp  sync.h
src/taiga/: action.cpp  announce.cpp  announce.h  api.cpp  api.h  app.cpp  app.h  application.cpp  application.hpp  command_line.cpp  command_line.h  config.h  debug.cpp  debug.h  dummy.cpp  dummy.h  http.cpp  http.h  http_new.cpp  http_new.h  orange.cpp  orange.h  orange.hpp  path.cpp  path.h  path.hpp  resource.h  resource.rc  script.cpp  script.h  settings.cpp  settings.h  settings.hpp  settings_keys.cpp  settings_keys.h  stats.cpp  stats.h  taiga.cpp  taiga.h  timer.cpp  (+7 more)
src/track/: episode.cpp  episode.h  episode_util.cpp  episode_util.h  feed.cpp  feed.h  feed_aggregator.cpp  feed_aggregator.h  feed_filter.cpp  feed_filter.h  feed_filter_manager.cpp  feed_filter_manager.h  feed_filter_util.cpp  feed_filter_util.h  feed_source.cpp  feed_source.h  media.cpp  media.h  media_stream.cpp  media_stream.h  mediaplayers.cpp  monitor.cpp  monitor.h  play.cpp  play.h  recognition.cpp  recognition.h  recognition_normalize.cpp  recognition_relations.cpp  recognition_score.cpp  recognition_validate.cpp  scanner.cpp  scanner.h  search.cpp  search.h  torrent_client.cpp  torrent_client.h
src/ui/: command.cpp  command.h  dialog.cpp  dialog.h  list.cpp  list.h  list_sort.cpp  menu.cpp  menu.h  resource.cpp  resource.h  theme.cpp  theme.h  translate.h  ui.cpp  ui.h
src/win/: win_accessibility.cpp  (+29 more)
(+378 files in other folders)
